Some spacing correction

--- a/src/scss/components/PrismicHome.scss
+++ b/src/scss/components/PrismicHome.scss
@@ -1,13 +1,18 @@
 .PrismicHome {
 
-  section{
+  section {
 	  margin-top: 8.0rem;
 	  margin-bottom: 5.0rem;
 	  text-align: center;
 
 	  h1 {
 	  	font-size: 7.0rem;
+			margin-bottom: 5px;
 	  }
+
+		div {
+			margin-bottom: 5px;
+		}
 
 	  h5 {
 	  	color: #777;
